--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   
   <body>
     <h1>Criação do GitHub Page</h1>
+
+    <ul>
+      <li> Criação usuário GitHub</li>
+      <li> Criar repositório</li>
+      <li> Clonar repositório</li>
+    </ul>
    
   </body>
 </html>
